2008-12-09  Timothy Hatcher  <timothy@apple.com>

        Implement a few methods needed to keep Dictionary.app working on Leopard.

        <rdar://problem/6002160> Internal changes to WebKit in Safari 4
        Developer Preview might break Dictionary

        Reviewed by Dan Bernstein.

        * WebView/WebFrame.mm:
        (-[WebFrame convertNSRangeToDOMRange:]): Added. Calls _convertNSRangeToDOMRange.
        (-[WebFrame convertDOMRangeToNSRange:]): Added. Calls _convertDOMRangeToNSRange.
        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _bridge]): Added. Returns the WebFrame, which has the methods
        that Dictionary.app is using.

2008-12-08  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.

        More work towards getting NPN_GetURL working.
        
        * Plugins/Hosted/HostedNetscapePluginStream.h:
        Inherit from NetscapePlugInStreamLoaderClient.
        
        (WebKit::HostedNetscapePluginStream::streamID):
        * Plugins/Hosted/HostedNetscapePluginStream.mm:
        (WebKit::HostedNetscapePluginStream::startStream):
        Keep track of the resposne URL and the MIME type. Pass the response URL to the 
        plug-in host.
        
        (WebKit::HostedNetscapePluginStream::didFinishLoading):
        Disconnect the stream.
        
        (WebKit::HostedNetscapePluginStream::start):
        Create a plug-in stream loader and start loading.
        
        (WebKit::HostedNetscapePluginStream::stop):
        Cancel the load.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCLoadURL):
        Fix the parameter order.
        
        (WKPCCancelLoadURL):
        New function that cancels a load of a stream with a given reason.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::destroy):
        Stop the streams.
        