@@ -58,8 +58,11 @@ private:
     PluginInstanceMap m_instances;
     
     mach_port_t m_clientPort;
+#ifdef USE_LIBDISPATCH
     dispatch_source_t m_clientPortSource;
-    
+#else
+    RetainPtr<CFRunLoopSourceRef> m_clientPortSource;
+#endif
     mach_port_t m_pluginHostPort;
     RetainPtr<CFMachPortRef> m_deadNameNotificationPort;
 };
